Páginas de servidor de questionário em implementação

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
 		{
 			"type": "path",
 			"url": "../../PComp",
-			"options": { "symlink": true }
+			"options": { "symlink": false }
 		}
 	]
 }
